--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -39,6 +39,49 @@
 .buttons-container a {
   width: 30rem;
   height: 10.4rem;
+
   border-radius: 0.8rem;
   margin-right: 1.6rem;
+
+  font: 700 2.4rem Archivo;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--color-button-text);
+
+  transition: background 0.2s;
+}
+
+.buttons-container a img {
+  width: 4rem;
+  margin-right: 2.4rem;
+}
+
+.buttons-container a.study {
+  background: var(--color-primary-lighter);
+}
+
+.buttons-container a.study:hover {
+  background: var(--color-primary-light);
+}
+.buttons-container a.give-classes {
+  background: var(--color-secondary);
+  margin-right: 0;
+}
+
+.buttons-container a.give-classes:hover {
+  background: var(--color-secondary-dark);
+}
+
+.total-connections {
+  font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.total-connections img {
+  margin-left: 0.8rem;
 }
