--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 40%;
-}
-
 #page-landing {
   background: var(--color-primary);
 }
@@ -84,4 +80,46 @@
 
 .total-connections img {
   margin-left: 0.8rem;
+}
+
+@media (max-width:699px) {
+  :root {
+    font-size: 40%;
+  }
+}
+
+@media (min-width: 1100px) {
+  #page-landing #container {
+    max-width: 1100px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 350px 1fr;
+    grid-template-areas: 
+    "proffy image image"
+    "button button texting";
+    gap: 60px;
+  }
+
+  .logo-container {
+    grid-area: proffy;
+    text-align: initial;
+    align-self: center;
+  }
+
+  .logo-container img {
+    height: 100%;
+  }
+
+  .hero-image {
+    grid-area: image;
+  }
+  .buttons-container {
+    grid-area: button;
+    justify-content: flex-start;
+    margin: 0px;
+  }
+  .total-connections {
+    justify-self: end;
+    grid-area: texting;
+  }
 }
