--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -97,21 +97,25 @@
     grid-template-areas: 
     "proffy image image"
     "button button texting";
-    gap: 60px;
+    column-gap: 87px;
+    row-gap: 86px;
   }
 
   .logo-container {
     grid-area: proffy;
     text-align: initial;
     align-self: center;
+    margin: 0px;
   }
 
   .logo-container img {
     height: 100%;
+    height: 127px;
   }
 
   .hero-image {
     grid-area: image;
+    height: 350px;
   }
   .buttons-container {
     grid-area: button;
@@ -121,5 +125,6 @@
   .total-connections {
     justify-self: end;
     grid-area: texting;
+    font-size: 1.2rem;
   }
 }
