--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,7 +8,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
-  <link rel="shortcut icon" href="src/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../../public/images/favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/partials/page-landing.css">
@@ -19,25 +19,25 @@
 
   <div id="container">
     <div class="logo-container">
-      <img src="src/images/logo.svg" alt="Proffy">
+      <img src="/images/logo.svg" alt="Proffy">
       <h2>Sua plataforma de estudos online</h2>
     </div>
-    <img class="hero-image" src="src/images/landing.svg" alt="Plataforma de estudos">
+    <img class="hero-image" src="/images/landing.svg" alt="Plataforma de estudos">
 
     <div class="buttons-container">
       <a class="study" href="Pages/study.html">
-        <img src="src/images/icons/study.svg" alt="Estudar">
+        <img src="/images/icons/study.svg" alt="Estudar">
         Estudar
       </a>
       <a class="give-classes" href="Pages/give-classes.html">
-        <img src="src/images/icons/give-classes.svg" alt="Dar aulas">
+        <img src="/images/icons/give-classes.svg" alt="Dar aulas">
         Dar aulas
       </a>
 
     </div>
     <p class="total-connections">
       Total de 200 conexões já realizadas
-      <img src="src/images/icons/purple-heart.svg" alt="Coração roxo">
+      <img src="/images/icons/purple-heart.svg" alt="Coração roxo">
     </p>
   </div>
 
