ajustando caminho de imagens e botões de todas as páginas

--- a/src/views/study.html
+++ b/src/views/study.html
@@ -21,10 +21,10 @@
   <div id="container">
     <header class="page-header">
       <div class="top-bar-container">
-        <a href="/index.html">
-          <img src="/src/images/icons/back.svg" alt="Voltar">
+        <a href="/">
+          <img src="/images/icons/back.svg" alt="Voltar">
         </a>
-        <img src="/src/images/logo.svg" alt="Proffy">
+        <img src="/images/logo.svg" alt="Proffy">
       </div>
 
       <div class="header-content">
@@ -88,7 +88,7 @@
         <footer>
           <p>Preço/hora <strong>R$20,00</strong></p>
           <button type="button">
-            <img src="/src/images/icons/whatsapp.svg" alt="Entrar em contato">Entrar em contato
+            <img src="/images/icons/whatsapp.svg" alt="Entrar em contato">Entrar em contato
           </button>
         </footer>
       </article>
@@ -112,7 +112,7 @@
         <footer>
           <p>Preço/hora <strong>R$20,00</strong></p>
           <button type="button">
-            <img src="/src/images/icons/whatsapp.svg" alt="Entrar em contato">Entrar em contato
+            <img src="/images/icons/whatsapp.svg" alt="Entrar em contato">Entrar em contato
           </button>
         </footer>
       </article>
