--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -21,10 +21,10 @@
   <div id="container">
     <header class="page-header">
       <div class="top-bar-container">
-        <a href="/index.html">
-          <img src="/src/images/icons/back.svg" alt="Voltar">
+        <a href="/">
+          <img src="/images/icons/back.svg" alt="Voltar">
         </a>
-        <img src="/src/images/logo.svg" alt="Proffy">
+        <img src="/images/logo.svg" alt="Proffy">
       </div>
 
       <div class="header-content">
@@ -123,7 +123,7 @@
 
       <footer>
         <p>
-          <img src="../src/images/icons/warning.svg" alt="Aviso importante">
+          <img src="/images/icons/warning.svg" alt="Aviso importante">
           Importante!<br>
           Preencha todos os dados
         </p>
