Adicionando os Proffys num array JS

--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -7,13 +7,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
-  <link rel="shortcut icon" href="/src/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="../styles/partials/forms.css">
   <link rel="stylesheet" href="../styles/partials/header.css">
   <link rel="stylesheet" href="/styles/partials/page-give-classes.css">
-  <title>Proffy | Sua plataforma de estudos online</title>
+  <title>Proffy | Dar aulas </title>
 </head>
 
 <body id="page-give-classes">
