--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,7 +8,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
     rel="stylesheet">
-  <link rel="shortcut icon" href="../../public/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
 
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/partials/page-landing.css">
