--- a/src/views/study.html
+++ b/src/views/study.html
@@ -72,50 +72,26 @@
 
     <main>
 
+      {%for proffy in proffys %}
       <article class="teacher-item">
         <header>
-          <img
-            src="https://avatars0.githubusercontent.com/u/62298830?s=460&u=ea0249ca3e7154c1a4938767cdb7bd4e025a40f9&v=4"
-            alt="Diego Fernandes">
+          <img src="{{proffy.avatar}}" alt="Proffy avatar">
           <div>
-            <strong>Hugo Lima</strong>
-            <span>Química</span>
+            <strong>{{proffy.name}}</strong>
+            <span>{{proffy.subject}}</span>
           </div>
         </header>
-        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório
-          e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas
-          explosões.</p>
+        <p>{{proffy.bio}}</p>
         <footer>
-          <p>Preço/hora <strong>R$20,00</strong></p>
-          <button type="button">
-            <img src="/images/icons/whatsapp.svg" alt="Entrar em contato">Entrar em contato
-          </button>
+          <p>Preço/hora <strong>R${{proffy.cost}}</strong></p>
+          <a href="https://api.whatsapp.com/send?l=pt_BR&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}}, {{proffy.name}}!"
+            class="button" target="_blank">
+            <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+          </a>
         </footer>
       </article>
+      {%endfor%}
 
-      <article class="teacher-item">
-        <header>
-          <img
-            src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4"
-            alt="Diego Fernandes">
-          <div>
-            <strong>Diego Fernandes</strong>
-            <span>Geografia</span>
-          </div>
-        </header>
-        <p>
-          As vezes não sei nem onde eu tô, mas consigo me localizar facilmente em qualquer lugar. Tenho memória
-          fotográfica e nunca fico perdido.
-          <br><br>Eu ensino a galera como não se perder na vida, com lições geográficas simples pra você nunca mais
-          precisar de mapa na sua bela vida.
-        </p>
-        <footer>
-          <p>Preço/hora <strong>R$20,00</strong></p>
-          <button type="button">
-            <img src="/images/icons/whatsapp.svg" alt="Entrar em contato">Entrar em contato
-          </button>
-        </footer>
-      </article>
 
     </main>
 
