--- a/src/views/study.html
+++ b/src/views/study.html
@@ -65,8 +65,12 @@
 
     <main>
 
-      {%for proffy in proffys %}
-      <article class="teacher-item">
+      {% if proffys == "" %}
+        <p class="no-results"> Nenhum professor encontrado com a sua pesquisa.</p>
+      {% else %}
+
+        {%for proffy in proffys %}
+          <article class="teacher-item">
         <header>
           <img src="{{proffy.avatar}}" alt="Proffy avatar">
           <div>
@@ -82,9 +86,11 @@
             <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
           </a>
         </footer>
-      </article>
-      {%endfor%}
-
+          </article>
+        {%endfor%}
+      
+      {% endif %}
+        
 
     </main>
 
