linkando database com o submit

--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-      <form action="" id="create-class">
+      <form action="/save-classes" id="create-class" method="POST">
         <!-- Fieldset é um agrupamento de dados, e deve sempre ser seguido de uma tag legend-->
         <fieldset>
           <legend>Seus dados</legend>
